WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281261
Position:sticky is fixed to the wrong ancestor when inside a remote subframe
https://bugs.webkit.org/show_bug.cgi?id=281261
Summary
Position:sticky is fixed to the wrong ancestor when inside a remote subframe
Matt Woodrow
Reported
2024-10-10 16:24:10 PDT
Looks like we always attach the sticky node to the hosting node, not it's normal parent.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-10 16:24:21 PDT
<
rdar://problem/137714491
>
Matt Woodrow
Comment 2
2024-10-10 16:27:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35010
EWS
Comment 3
2024-10-14 14:03:14 PDT
Committed
285141@main
(7aa924205b75): <
https://commits.webkit.org/285141@main
> Reviewed commits have been landed. Closing PR #35010 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug